changed submit button issue

--- a/contact-me.html
+++ b/contact-me.html
@@ -17,7 +17,7 @@
       <input type="email" name="myEmail" value=""><br>
       <label>Your Message: </label>
       <textarea name="myMessage" rows="8" cols="80"></textarea><br>
-      <input type="submit" name="" value="">
+      <input type="submit" name="">
     </form>
   </body>
 </html>
